# sdltm_browser

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _prerequisites.txt  default_filter_settings.sdlfilters  install_manifest.txt  sqlitebrowser.sln  sqlitebrowser.vcxproj  sqlitebrowser.vcxproj.filters  trados_sdltm.sln  trados_sdltm.vcxproj  trados_sdltm.vcxproj.filters  version.h
libs/qcustomplot-source/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  qcustomplot.vcxproj  qcustomplot.vcxproj.filters
libs/qhexedit/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  qhexedit.vcxproj  qhexedit.vcxproj.filters
libs/qscintilla/Qt4Qt5/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  qscintilla2.vcxproj  qscintilla2.vcxproj.filters
src/: AboutDialog.ui  Application.cpp  ExtendedTableWidget.cpp  ExtendedTableWidget.h  FileDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Settings.cpp  SqlExecutionArea.cpp  SqlExecutionArea.h  TableBrowser.cpp  TableBrowser.h  main.cpp  sqlitedb.cpp  sqlitedb.h  winapp.rc
src/icons/: icons.qrc  icons.qrc.depends
src/sdltm/: BackgroundProgressDialog.cpp  BackgroundProgressDialog.h  CustomFieldService.cpp  CustomFieldService.h  DbFieldValueService.cpp  DbFieldValueService.h  FuncThread.cpp  FuncThread.h  MainThreadProgressDialog.cpp  MainThreadProgressDialog.h  SdltmCreateSqlSimpleFilter.cpp  SdltmCreateSqlSimpleFilter.h  SdltmDbBackupCreator.cpp  SdltmDbBackupCreator.h  SdltmDbInfo.cpp  SdltmDbInfo.h  SdltmDbUpdate.cpp  SdltmDbUpdate.h  SdltmFilter.cpp  SdltmFilter.h  SdltmHashCode.cpp  SdltmHashCode.h  SdltmSqlHistory.cpp  SdltmSqlHistory.h  SdltmSqlUtil.cpp  SdltmSqlUtil.h  SdltmSqlViewStyledItemDelegate.cpp  SdltmSqlViewStyledItemDelegate.h  SdltmUpdateCache.cpp  SdltmUpdateCache.h  SdltmUtil.cpp  SdltmUtil.h  SqlFilterBuilder.cpp  SqlFilterBuilder.h  SqliteTableModel.cpp  SqliteTableModel.h  qchecklist.h
src/sdltm/export/: CustomFieldValueService.cpp  CustomFieldValueService.h  ExportSqlToTmx.cpp  ExportSqlToTmx.h
src/sdltm/import/: BulkSqlExecute.cpp  BulkSqlExecute.h  CustomFieldsTmxLoader.cpp  CustomFieldsTmxLoader.h  ImportTmxToSql.cpp  ImportTmxToSql.h  SimpleXml.cpp  SimpleXml.h
src/sdltm/sqlite_recover/: dbdata.c
src/sdltm/ui/: BatchEdit.cpp  BatchEdit.h  BatchEdit.ui  EditCustomFields.cpp  EditCustomFields.h  EditCustomFields.ui  EditSdltmFilter.cpp  EditSdltmFilter.h  EditSdltmFilter.ui  MultiTextEdit.cpp  MultiTextEdit.h  MultiTextEdit.ui  SdltmEditDialog.cpp  SdltmEditDialog.h  SdltmFiltersList.cpp  SdltmFiltersList.h  SdltmFiltersList.ui  SdltmSqlView.cpp  SdltmSqlView.h  SdltmSqlView.ui
